# pcsrt

./: .gitignore  Cargo.toml  LICENSE  README.md  run_new.sh
src/: develop.rs  main.rs  pcsrt.rs  run.rs
src/cli/: cli.yaml  mod.rs
src/cli/input_params/: arg_names.rs  errors.rs  mod.rs
src/cli/input_params/block_params/: mod.rs  (+1 more)
src/cli/options/: build_grid_options.rs  build_normals_options.rs  mod.rs  run_options.rs
src/cli/parsers/: mod.rs  parse_block_params.rs  parse_centroid.rs  parse_file.rs  parse_horizon.rs  parse_linke.rs  parse_terrain_dem.rs  parse_time_range.rs
src/cli_new/: mod.rs
src/cli_new/input_params/: mod.rs
src/cloud_params/: average_points.rs  get_cloud_params.rs  voxel_size.rs
src/common/: block_iterator.rs  cloud_params.rs  constants.rs  density.rs  extent.rs  horizon.rs  linke.rs  mod.rs
src/io/read/: las.rs  mod.rs  ply.rs
src/io/write/: las.rs  mod.rs  ply.rs
src/lib/: mod.rs
src/lib/cloud_params/: average_points.rs  get_cloud_params.rs  mod.rs
src/lib/common/: mod.rs
src/lib/grid/: mod.rs  voxel_grid.rs
src/lib/io/: mod.rs  reader.rs  writer.rs
src/lib/radiation/: calculate_solar_radiation.rs
src/lib/voxel/: block_iterator.rs  mod.rs  structs.rs
src/radiation/: calculate_solar_radiation.rs  mod.rs
src/radiation/illumination/: get_illuminated_voxels.rs  get_rotated_voxel_key_pairs.rs  mod.rs  structs.rs
src/radiation/radiation_components/: beam_component.rs  diffuse_component.rs  global_irradiance.rs  irradiance.rs  mod.rs  structs.rs
src/radiation/sun_position/: calc_solar_position.rs  get_sun_positions.rs  get_sun_rotation_matrices.rs  mod.rs  sunrise_sunset.rs
src/voxel/: block_iterator.rs  build_normals.rs  build_voxel_grid.rs  calculate_normals.rs  mod.rs  normal_from_points.rs  plane_from_points.rs  structs.rs
(+51 files in other folders)
