[package]
name = "pcsrt"
version = "0.1.0"
authors = ["Filip Pruzinec <pruzinec.f@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
las = { version = "0.7.4", features = ["laz"] }
ply-rs = "0.1.3"
itertools = "0.10.1"                               # remove later
nalgebra = "0.29.0"                                # remove later
rayon = "1.5.0"                                    # remove later
chrono = "0.4.19"
clap = { version = "2.33.3", features = ["yaml"] }
log = "0.4.14"
env_logger = "0.9.0"
thincollections = "0.5.0"
