[package]
name = "pcsrt"
version = "0.1.0"
authors = ["Filip Pruzinec <pruzinec.f@gmail.com>"]
edition = "2021"

[lib]
name = "pcsrt"
path = "src/lib/mod.rs"

[dependencies]
las = { version = "0.7.8", features = ["laz"] }
byteorder = "^1.1.0"
num_cpus = "1.14.0"
lzw = "0.10.0"
ply-rs = "0.1.3"
nalgebra = "0.32.2"
rayon = "1.5.0"
regex = "1"
spa = "0.4.0"
chrono = "0.4.19"
clap = { version = "4.3.0", features = ["derive"] }
log = "0.4.14"
env_logger = "0.10.0"
geoutils = "0.5.1"
twox-hash = "1.6.2"
